# MaGE

./: .gitignore  README.md
src/: CMakeLists.txt
src/CORE_allocator/: CMakeLists.txt
src/CORE_allocator/src/: allocator.h  memorychunks.cpp  memorychunks.h
src/CORE_app/: CMakeLists.txt
src/CORE_app/src/: app.cpp  app.h
src/CORE_buffer/: CMakeLists.txt
src/CORE_buffer/src/: buffer.cpp  buffer.h
src/CORE_ecs/: CMakeLists.txt
src/CORE_ecs/src/: aspects.h  component.h  componentcontainer.cpp  componentcontainer.h  ecshelpers.h  entity.h  entitygraph.cpp  entitygraph.h  sysengine.cpp  sysengine.h  system.cpp  system.h
src/CORE_file/: CMakeLists.txt
src/CORE_file/src/: file.cpp  file.h
src/CORE_filesystem/: CMakeLists.txt
src/CORE_filesystem/src/: filesystem.cpp  filesystem.h
src/CORE_json/: CMakeLists.txt
src/CORE_json/src/: json.cpp  json.h
src/CORE_logger/: CMakeLists.txt
src/CORE_logger/src/: logconf.cpp  logconf.h  logging.cpp  logging.h  logoutput.h  logoutputfile.cpp  logoutputfile.h  logsink.cpp  logsink.h
src/CORE_maths/: CMakeLists.txt
src/CORE_maths/src/: maths_helpers.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  tvector.cpp  tvector.h
src/CORE_module/: CMakeLists.txt
src/CORE_module/src/: moduleload.cpp  moduleload.h  pimanager.h  pimanager_impl.hpp
src/CORE_services/: CMakeLists.txt
src/CORE_services/src/: logger_service.cpp  logger_service.h  shaders_service.cpp  shaders_service.h  textures_service.cpp  textures_service.h
src/CORE_threads/: CMakeLists.txt
src/CORE_threads/src/: asynctask.h  mailbox.h  runner.cpp  runner.h
src/CORE_time/: CMakeLists.txt
src/CORE_time/src/: syncvariable.h  timecontrol.cpp  timecontrol.h  timemanager.cpp  timemanager.h
src/CORE_xtree/: CMakeLists.txt
src/CORE_xtree/src/: xtree.cpp  xtree.h
src/RENDERING_control/: CMakeLists.txt
src/RENDERING_control/src/: datacloud.cpp  datacloud.h  renderingqueue.cpp  renderingqueue.h  renderstate.cpp  renderstate.h
src/SYSTEM_animations/: CMakeLists.txt
src/SYSTEM_animations/src/: animationssystem.cpp  animationssystem.h
src/SYSTEM_d3d11/: CMakeLists.txt
src/SYSTEM_d3d11/src/: d3d11system.cpp  d3d11system.h  d3d11systemimpl.cpp  d3d11systemimpl.h  d3d11systemimpl_actions.cpp  d3d11systemimpl_buffers.cpp  d3d11systemimpl_drawing.cpp  d3d11systemimpl_helpers.cpp  d3d11systemimpl_init.cpp  d3d11systemimpl_meshes.cpp  d3d11systemimpl_shaders.cpp  d3d11systemimpl_textures.cpp  d3dsystemimpl_renderstate.cpp
src/SYSTEM_dataprint/: CMakeLists.txt
src/SYSTEM_dataprint/src/: dataprintsystem.cpp  dataprintsystem.h
src/SYSTEM_renderingqueue/: CMakeLists.txt
src/SYSTEM_renderingqueue/src/: renderingqueuesystem.cpp  renderingqueuesystem.h
src/SYSTEM_resource/: CMakeLists.txt
src/SYSTEM_resource/src/: animationbone.h  animations.h  linemeshe.cpp  linemeshe.h  primitives.h  resourcestatecontroler.cpp  resourcestatecontroler.h  resourcesystem.cpp  resourcesystem.h  resourcesystem_meshe.cpp  resourcesystem_shader.cpp  resourcesystem_texture.cpp  scenenode.cpp  scenenode.h  shader.cpp  shader.h  texture.cpp  texture.h  trianglemeshe.cpp  trianglemeshe.h
src/SYSTEM_scenestreamer/: CMakeLists.txt  SYSTEM_scenestreamer.sln  SYSTEM_scenestreamer.vcxproj  SYSTEM_scenestreamer.vcxproj.filters
src/SYSTEM_scenestreamer/src/: scenestreamersystem.cpp  scenestreamersystem.h
src/SYSTEM_time/: CMakeLists.txt
src/SYSTEM_time/src/: timesystem.cpp  timesystem.h
src/SYSTEM_world/: CMakeLists.txt
src/SYSTEM_world/src/: worldsystem.cpp  worldsystem.h
src/TRANSFORM_control/: CMakeLists.txt
src/TRANSFORM_control/src/: animatorfunc.h  matrixchain.cpp  matrixchain.h  matrixfactory.cpp  matrixfactory.h  worldposition.h
src/appbases/: CMakeLists.txt
src/appbases/src/base/: base.cpp  base.h  base_close.cpp  base_init.cpp  base_run.cpp
src/appbases/src/openenv/: openenv.h  openv_init.cpp  openv_run.cpp
src/appbases/src/samples_base/: samplesbase.cpp  samplesbase.h  samplesbase_close.cpp  samplesbase_init.cpp  samplesbase_run.cpp
src/appbases/src/samples_openenv/: samplesopenenv.h  samplesopenv_init.cpp  samplesopenv_run.cpp
src/appbases/src/streamed_openenv/: streamedopenenv.h  streamedopenv_init.cpp  streamedopenv_run.cpp
src/commons/: CMakeLists.txt  commons.cpp  eventsource.h  exceptions.h  module_root.h  singleton.h
src/config/module_anims_config/: logconf.json
src/config/module_openenv_config/: logconf.json
src/console_tests/console_callback/: CMakeLists.txt
src/console_tests/console_callback/src/: main.cpp
src/console_tests/console_fileio/: CMakeLists.txt
src/console_tests/console_fileio/src/: main.cpp
src/console_tests/console_threads/: CMakeLists.txt
src/console_tests/console_threads/src/: main.cpp
src/console_tests/console_xtree/: CMakeLists.txt
src/console_tests/console_xtree/src/: main.cpp
src/docs/: snippets.txt
src/helpers/: CMakeLists.txt  animators_helpers.h  entitygraph_helpers.cpp  entitygraph_helpers.h  graphicobjects_helpers.cpp  graphicobjects_helpers.h  helpers.cpp  rendering_helpers.cpp  rendering_helpers.h  renderingpasses_helpers.cpp  renderingpasses_helpers.h  shadows_helpers.cpp  shadows_helpers.h
src/hlsl40_shaders/: CMakeLists.txt
src/hlsl50_shaders/: CMakeLists.txt  hls50_shaders.sln  hlsl50_shaders.vcxproj  hlsl50_shaders.vcxproj.filters  hlsl50_shaders_commons.vcxproj  hlsl50_shaders_commons.vcxproj.filters  hlsl50_shaders_metadata.vcxproj  hlsl50_shaders_metadata.vcxproj.filters
src/meshes/: flatclouds.ac  g_grass.ac  ground.ac  rock.ac  skydome.ac  wall.ac
src/module_anims/: CMakeLists.txt
src/module_basic/: CMakeLists.txt
src/module_gblcamera/: CMakeLists.txt
src/module_openenv/: CMakeLists.txt
src/module_renderingquad/: CMakeLists.txt
src/module_scene00/: CMakeLists.txt
src/module_sprites/: CMakeLists.txt
src/module_streamed_anims/: CMakeLists.txt
src/module_streamed_anims/src/: module_impl.cpp  module_impl.h  module_impl_close.cpp  module_impl_init.cpp  module_impl_keyboard.cpp  module_impl_mouse.cpp  module_impl_run.cpp
src/rt/: CMakeLists.txt
(+199 files in other folders)
